# bronto-mcp-server

./: .env.example  .gitignore  Makefile  README.md  install.sh  pyproject.toml
.github/workflows/: build.yml
scripts/: bronto-mcp  test.sh
src/bronto/: __init__.py  __main__.py  clients.py  config.py  logger.py  main.py  runtime.py  server.py  tools.py
src/bronto/agents/: __init__.py  agent_catalog.json  base.py  datasets_agent.py  playbooks.py  registry.py  search_agent.py  statement_ids_agent.py  utils.py
src/bronto/agents/access/: __init__.py  access_agent.py  enums.py
src/bronto/agents/api_keys/: __init__.py  api_keys_agent.py  enums.py
src/bronto/agents/context/: __init__.py  context_agent.py  enums.py
src/bronto/agents/dashboard/: __init__.py  (+2 more)
src/bronto/clients/: __init__.py  bronto.py
src/bronto/schemas/: __init__.py  admin.py  dashboard.py  datasets.py  search.py
src/bronto/tools/: __init__.py  base.py  bronto_tools.py  registry.py
src/main/brmcpserver/: clients.py  models.py  tools.py
src/test/: test_bronto_runtime.py  test_bronto_tools.py  test_config.py
src/test/agents/: test_agent_contracts.py  test_base.py  test_playbooks.py  test_registry.py  test_statement_ids_handlers.py
src/test/clients/: test_bronto_client.py
src/test/config/: test_config.py
src/test/logger/: test_logger.py
src/test/runtime/: test_dashboard_tools.py  test_runtime_registration.py  test_runtime_tools.py
src/test/schemas/: test_dashboard_schema.py  test_datasets_schema.py  test_search_schema.py
src/test/server/: test_entrypoint.py  test_server.py
(+135 files in other folders)
