[project]
name = "bronto-mcp-server"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]==1.13.1",
]

[dependency-groups]
dev = [
    "coverage==7.10.6",
    "pytest==8.4.1",
    "ruff==0.12.11",
]

[tool.pytest.ini_options]
pythonpath = ["src/main/brmcpserver"]
testpaths = ["src/test"]
