[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bronto-mcp-server"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]==1.13.1",
]

[project.scripts]
bronto-mcp = "bronto.server:main"

[dependency-groups]
dev = [
    "coverage==7.10.6",
    "pytest==8.4.1",
    "ruff==0.12.11",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"bronto.agents" = ["system/*.md"]
"bronto.agents.datasets" = ["playbooks/*.md"]
"bronto.agents.search" = ["playbooks/*.md"]
"bronto.agents.statement_ids" = ["playbooks/*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/test"]
